# sqlx-example

./: Cargo.toml  README.md  db-1.sql  db-2.sql
src/: main.rs
