[package]
name = "sqlx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sqlx = { version = "0.5", features = ["runtime-tokio-rustls" , "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
